- Fixed Show Comments button for live streams. - Changed scrollbar style to match YouTube's chapters scrollbar style. - Moved Show Comments styles to the CSS file.

--- a/src/showYoutubeComments-scrollbar.css
+++ b/src/showYoutubeComments-scrollbar.css
@@ -7,7 +7,7 @@
 	border-radius: 8px;
 	border: 4px solid transparent;
 	background-clip: content-box;
-	background-color: var(--yt-opalescence-dark-grey);
+	background-color: var(--yt-spec-text-secondary);
 }
 
 #comments::-webkit-scrollbar-thumb:hover, #comments::-webkit-scrollbar-thumb:active {
